--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.0",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.13.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
