--- a/package.json
+++ b/package.json
@@ -69,5 +69,5 @@
   "devDependencies": {
     "prettier": "1.19.1"
   },
-  "proxy": "https://www.flickr.com"
+  "proxy": "http://localhost:5000"
 }
